<resources>
    <string name="app_name">Read With Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="facebook_app_id">701730560608609</string>
    <string name="fb_login_protocol_scheme">fb701730560608609</string>


    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Sair</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="continue_com_o_facebook">Continue com o Facebook</string>
    <string name="continue_com_o_google">Continue com o Google</string>


    <string name="added">added</string>
    <string name="modified">modified</string>
    <string name="removed">removed</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="voltar">Voltar</string>
    <string name="continuar">Continuar</string>

    <!--STRINGS DO QUESITOS 1-->
    <string name="title_idenficacao">Informações importantes sobre o texto</string>
    <string name="q1_1">Título do texto</string>
    <string name="q1_2">Autor ou autores</string>
    <string name="q1_3">Você já conhecia o autor do texto? Já leu outros textos dele? O que achou? O que é importante registrar?</string>
    <string name="q1_4">Referência Bibliográfica</string>
    <string name="q1_5">Qual o seu objetivo ao ler o texto?</string>
    <string name="q1_6">Assunto principal do texto</string>
    <string name="q1_7">Outros assuntos do texto</string>
    <string name="q1_8">Como você chegou até o texto? O texto foi indicado por alguém? Quem? Essa informação é importante para a leitura? Por quê?</string>
    <string name="q1_9">Data de início da leitura</string>
    <string name="q1_10">Data de término da leitura</string>
    <string name="q1_11">Você quer fazer uma análise completa? *</string>
    <string name="radio_sim">Sim</string>
    <string name="radio_reacoes">Quero apenas anotar minhas reações de leitura</string>
    <string name="radio_anotacoea">Quero apenas fazer anotações livres sobre minha leitura</string>
    <string name="radio_apenas_resumos">Quero fazer apenas resumos, citações e paráfrases, rapidamente</string>
    <string name="radio_encerrar">Quero encerrar por aqui</string>
    <string name="auto_focus_on">On</string>
    <string name="auto_focus_off">Off</string>
    <string name="formats">Formatos</string>
    <string name="select_camera">Selecionar Câmera</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="isbn">ISBN</string>
    <string name="novo_audio">Novo Áudio</string>
    <string name="impressoes_em_audio">Impressões em Áudio</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="title_apenas_reacoes">Suas reações ao texto</string>
    <string name="text_q_reacoes_1">Como você classificaria o seu interesse após 5 minutos de leitura?</string>
    <string name="text_q_reacoes_2">"Justifique a resposta, é importante para você se conhecer como leitor: "</string>
    <string name="text_q_reacoes_3">"E na metade de leitura, como você se sentia? "</string>
    <string name="text_q_reacoes_4">"Justifique a resposta, é importante para você se conhecer como leitor: "</string>
    <string name="text_q_reacoes_5">"Como você classificaria o prazer ao final da leitura? "</string>
    <string name="text_q_reacoes_6">"Justifique a resposta, é importante para você se conhecer como leitor: "</string>
    <string name="text_q_reacoes_7">"Seu objetivo ao ler o texto foi cumprido? "</string>
    <string name="text_q_reacoes_8">"Caso a leitura não tenha sido satisfatória para o objetivo, o que aconteceu? "</string>
    <string name="text_q_reacoes_9">"Que outra coisa? "</string>
    <string name="text_q_reacoes_10">"As ideias do autor lhe agradam? "</string>
    <string name="text_q_reacoes_11">"Com que partes do texto você concorda mais? Faça citações ou paráfrases: "</string>
    <string name="text_q_reacoes_12">Com que parte(s) do texto você discorda? Faça citações, paráfrases, discuta e apresente argumentos:</string>
    <string name="text_q_reacoes_13">"O estilo de escrita do autor lhe agrada? "</string>
    <string name="text_q_reacoes_14">"Justifique a resposta, é importante para você se conhecer como leitor: "</string>
    <string name="text_q_reacoes_15">"O gênero desse livro lhe agrada? "</string>
    <string name="text_q_reacoes_16">"Justifique a resposta, é importante para você se conhecer como leitor: "</string>
    <string name="text_q_reacoes_17">"Você acredita que a leitura desse texto contribuiu em alguma dessas áreas? "</string>
    <string name="text_q_reacoes_18">"Justifique a resposta, citando trechos ou fazendo paráfrases: "</string>
    <string name="text_q_reacoes_19">Você acredita que a leitura do texto contribuiria para a vida de outras pessoas? Quais? Como?</string>
    <string name="act_reacoes_check_avaliei_mal">Avaliei mal o conteúdo do texto, não era o que eu buscava</string>
    <string name="act_reacoes_check_texto_nao_cumpre">O texto não cumpre o prometido nos elementos externos, capa, orelha, sinopse, etc</string>
    <string name="act_reacoes_check_texto_nao_cumpre_quem_recomendou">O texto não cumpre o que prometia quem o recomendou</string>
    <string name="act_reacoes_check_profundidade_maior_menor">A profundidade do texto era maior ou menor do que a minha avaliação inicial</string>
    <string name="act_reacoes_check_outra_coisa">Outra coisa</string>
    <string name="act_reacoes_check_vida_academica">vida acadêmica a curto prazo</string>
    <string name="act_reacoes_check_prazer_e_diversao">prazer e diversão!</string>
    <string name="act_reacoes_check_minha_pesquisa_atual">minha pesquisa atual</string>
    <string name="act_reacoes_check_pesquisas_futuras">pesquisas futuras, áreas em que quero me especializar no futuro</string>
    <string name="act_reacoes_check_vida_profissional">minha vida profissional</string>
    <string name="act_reacoes_check_pratica_leitura">minha prática de leitura</string>
    <string name="act_reacoes_check_producao_textos">minha produção de textos</string>
    <string name="act_reacoes_check_vida_pessoal">minha vida pessoal</string>
    <string name="act_reacoes_check_conhecimento_mundo">meu conhecimento do mundo</string>
    <string name="act_reacoes_check_gosto_muito">conhecimento sobre algo que gosto muito</string>
    <string name="title_anotacoes_livres">Anotações livres</string>
    <string name="text_q_anotacoes_livres_q3_1">Vai fundo</string>
    <string name="title_elementos_exteriores_ao_texto">Elementos exteriores ao texto</string>
    <string name="title_resumos_citacoes_parafrase">Resumos, citações e paráfrases</string>
    <string name="delete">Remover Análise</string>
    <string name="title_complete_2">Qual tipo de texto você está lendo?</string>
    <string name="title_quesitos_texto_informativo">Pontos importantes do texto informativo</string>
    <string name="act_poesia_algumas_palavras">Algumas palavras utilizadas se destacam pela repetição, transformação</string>
    <string name="act_poesia_o_vocabulario">O vocabulário como um todo se destaca</string>
    <string name="act_poesia_as_figuras">As figuras de linguagem utilizadas são importantes para o clima do texto</string>
    <string name="act_poesia_o_tamanho">O tamanho das frases e dos parágrafos se destacam</string>
    <string name="act_poesia_a_utilizacao">A utilização da pontuação faz diferença</string>
    <string name="act_poesia_o_equilibrio">O equilíbrio na utilização de verbos, substantivos e adjetivos é importante</string>
    <string name="act_poesia_outra">Outra</string>
    <string name="act_narrativo_algumas_palavras">Algumas palavras utilizadas se destacam pela repetição, transformação</string>

    <string name="act_narrativo_as_figuras">As figuras de linguagem utilizadas são importantes para o clima do texto</string>


    <string name="act_comentar_difuldade_check1_Q13_1">Vocabulário antigo, com muitas palavras em desuso</string>
    <string name="act_comentar_difuldade_check2_Q13_1">Vocabulário muito técnico, ainda não conheço bem o assunto</string>
    <string name="act_comentar_difuldade_check3_Q13_1">Vocabulário de uma classe social muito específica</string>
    <string name="act_comentar_difuldade_check4_Q13_1">A forma como o autor coloca seus argumentos é confusa</string>
    <string name="act_comentar_difuldade_check5_Q13_1">O estilo do autor é muito rebuscado ou intrincado</string>
    <string name="act_comentar_difuldade_check6_Q13_1">O pensamento do autor é muito abstrato, difícil de visualizar</string>
    <string name="act_comentar_difuldade_check7_Q13_1">Dificuldade em relacionar o texto ao objetivo de leitura</string>
    <string name="act_check_1Q14_1">sua relação pessoal com alguma pessoa, ou com um grupo de pessoas</string>
    <string name="act_check_2Q14_1">uma experiência pessoal sua ou de alguém que você conhece</string>
    <string name="act_check_3Q14_1">uma experiência profissional ou acadêmica que você teve</string>
    <string name="act_check_4Q14_1">palestra ou evento acadêmico a que você compareceu</string>
    <string name="act_check_5Q14_1">alguma aula que você assistiu</string>
    <string name="act_check_6Q14_1">uma comida, um lugar, uma cidade...</string>
    <string name="act_check_1Q14_3">obras diversas de um artista específico</string>
    <string name="act_check_2Q14_3">um filme</string>
    <string name="act_check_3Q14_3">uma peça de teatro</string>
    <string name="act_check42Q14_3">uma obra literária em prosa</string>
    <string name="act_check52Q14_3">uma poesia ou o conjunto de poesias de um poeta</string>
    <string name="act_check62Q14_3">uma música</string>
    <string name="act_check72Q14_3">uma pintura, um grafite</string>
    <string name="act_check82Q14_3">uma escultura, um elemento arquitetônico</string>

</resources>
