<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.quesitos.QuesitosCompletoRelacoesOutrosConteudos"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_quesitos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Você consegue relacionar o texto com alguma dessas experiências?" />

                <CheckBox
                    android:id="@+id/act_check_1Q14_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_1Q14_1"
                    android:text="@string/act_check_1Q14_1" />

                <CheckBox
                    android:id="@+id/act_check_2Q14_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_2Q14_1"
                    android:text="@string/act_check_2Q14_1" />

                <CheckBox
                    android:id="@+id/act_check_3Q14_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_3Q14_1"
                    android:text="@string/act_check_3Q14_1" />

                <CheckBox
                    android:id="@+id/act_check_4Q14_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_4Q14_1"
                    android:text="@string/act_check_4Q14_1" />

                <CheckBox
                    android:id="@+id/act_check_5Q14_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_5Q14_1"
                    android:text="@string/act_check_5Q14_1" />

                <CheckBox
                    android:id="@+id/act_check_6Q14_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_6Q14_1"
                    android:text="@string/act_check_6Q14_1" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Descreva as experiências que acreditar mais importantes:" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/act_q14_2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_input_act_q14_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Você consegue relacionar o texto com algum desses objetos culturais?" />

                <CheckBox
                    android:id="@+id/act_check_1Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_1Q14_3"
                    android:text="@string/act_check_1Q14_3" />

                <CheckBox
                    android:id="@+id/act_check_2Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_2Q14_3"
                    android:text="@string/act_check_2Q14_3" />

                <CheckBox
                    android:id="@+id/act_check_3Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check_3Q14_3"
                    android:text="@string/act_check_3Q14_3" />

                <CheckBox
                    android:id="@+id/act_check42Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check42Q14_3"
                    android:text="@string/act_check42Q14_3" />

                <CheckBox
                    android:id="@+id/act_check52Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check52Q14_3"
                    android:text="@string/act_check52Q14_3" />

                <CheckBox
                    android:id="@+id/act_check62Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check62Q14_3"
                    android:text="@string/act_check62Q14_3" />

                <CheckBox
                    android:id="@+id/act_check72Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check72Q14_3"
                    android:text="@string/act_check72Q14_3" />

                <CheckBox
                    android:id="@+id/act_check82Q14_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:tag="act_check82Q14_3"
                    android:text="@string/act_check82Q14_3" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Descreva com mais detalhes as relações marcadas na questão anterior:" />

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_input_act_q14_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Você consegue relacionar o texto com algum texto acadêmico cujo autor concorde ou complemente as ideias apresentadas? Qual?" />

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_input_act_q15_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Você consegue relacionar o texto com algum texto acadêmico cujo autor discorde das ideais apresentadas? Qual?" />

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_input_act_q14_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <include
                    layout="@layout/buttons_voltar_continuar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>



