<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>
    <ImageView
        android:id="@+id/act_login_image_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/act_login_name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

<!--    <com.facebook.login.widget.LoginButton-->
<!--        android:id="@+id/act_login_button_facebook"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:visibility="gone"-->
<!--        android:text="@string/continue_com_o_facebook"-->
<!--        android:layout_marginBottom="30dp" />-->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/act_login_button_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_com_o_google"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/act_login_btt_disconect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:theme="@style/ThemeOverlay.MyDarkButton" />



</LinearLayout>
