<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.quesitos.QuesitosAnotacoesLivresActivity">

    <include
        layout="@layout/app_bar_quesitos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_q_anotacoes_livres_q3_1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_text_q_anotacoes_livres_q3_1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/act_text_q_anotacoes_livres_input_q3_1"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:lines="100" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    app:layout_constraintTop_toBottomOf="@+id/text_q1_11">

                    <Button
                        android:id="@+id/act_quesitos_reacoes_btt_voltar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.5"
                        android:text="@string/voltar" />

                    <Button
                        android:id="@+id/act_quesitos_reacoes_btt_continuar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.5"
                        android:text="@string/continuar" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>

